# cesar-live-192

./: Makefile  README  README.md  continuous_integration.yml  debug.py  pyproject.toml
.github/workflows/: continuous_integration.yml
cesar/: __init__.py  cesar.py  cli.py  gera_temp.py
docs/: index.md
github/workflows/: continuous_integration.yml
tests/: test_encripta.py
