[tool.poetry]
name = "cesar-cifra"
version = "0.1.0"
description = "Implementação da cifra de cesar!"
authors = ["Bruno Lopes <blopes009@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"
pep8 = "^1.7.1"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
blue = "^0.9.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
